platform/argocd/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: argocd
  namespace: argocd
  annotations:
    external-dns.alpha.kubernetes.io/cloudflare-proxied: "true"
    external-dns.alpha.kubernetes.io/target: "69.30.233.178"
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`argo.xn--cyberlnx-ykb.com`)
      kind: Rule
      services:
        - name: argocd-server
          port: 80
  tls:
    certResolver: le
